bgd/bgd-namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: bgd
bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
status: {}
